--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "join-transition",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "React Component for transitioning values and sets of values",
   "main": "./dist/index.js",
   "scripts": {
@@ -22,7 +22,11 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "enzyme": "^2.4.1",
+    "jsdom": "^9.4.1",
+    "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.2.1",
+    "react-dom": "^15.2.1"
   },
   "babel": {
     "presets": [
