--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "enzyme": "^2.4.1",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
-    "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-addons-test-utils": "15",
+    "react-dom": "15"
   },
   "babel": {
     "presets": [
